# test-torch-custom-op

./: CMakeLists.txt  debug.sh  setup.py
foo/: __init__.py
src/: custom.cpp  pybind.cpp
